Adjusted fix for box-shadow spilling into the next column

--- a/sass/common/_widgets.scss
+++ b/sass/common/_widgets.scss
@@ -60,13 +60,10 @@
 			page-break-inside: avoid;
 			@include break-inside(avoid);
 
-			~ * {
-				margin-top: $spacing-primary;
-			}
+			padding-bottom: .5em;
 
-			&:first-child {
-				margin-top: -.5em; // Blink fix: solves box-shadow on images being split across columns
-				padding-top: .5em;
+			~ * {
+				margin-top: $spacing-primary; // Blink fix: solves box-shadow on images being split across columns
 			}
 
 			// if there are 2 elements exactly, we need to force a break to guarantee 2 columns
