--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -283,13 +283,10 @@ header .tags {
     -moz-page-break-inside: avoid;
     -webkit-column-break-inside: avoid;
     break-inside: avoid;
+    padding-bottom: .5em;
   }
   .listing > * ~ * {
     margin-top: 2em;
-  }
-  .listing > *:first-child {
-    margin-top: -.5em;
-    padding-top: .5em;
   }
   .listing > *:first-child:nth-last-child(2) {
     margin-bottom: 0;
